--- a/accueil_projet_de_langue.html
+++ b/accueil_projet_de_langue.html
@@ -6,7 +6,7 @@ git commit -m "commentaire à la con"
 git push
 -->
 
-<html lang="fr"></html>
+<html lang="fr">
     <head>
         <meta charset="utf-8">
         <meta name = "viewport" content="width=device_width, initial-scale = 1, viewport-fit = cover"> <!--Pour les mobiles exclusivement-->
@@ -46,15 +46,15 @@ git push
 
         <nav class="menu_deroulant_lateral"> <!--Rajouter les liens des pages-->
             <li><a href="accueil_projet_de_langue.html">Présentation</a>
-                <ul class="depliant1">
+                <ul class="depliant_presentation">
                     <li><a href="#introduction">Introduction</a></li>
                     <li><a href="#carte">Mappemonde</a></li>
                 </ul>
             </li>
-            <li><a href="europe.html">En Europe</a> <!--Une carte avec des liens vers le paragraphe précis-->
-                <ul class="depliant1">
+            <li><a href="fr/europe.html">En Europe</a> <!--Une carte avec des liens vers le paragraphe précis-->
+                <ul class="depliant_europe">
                     <li><a href="fr/europe/puissances.html">Puissances européennes en 1750</a>
-                        <ul class="depliant2">
+                        <ul class="depliant_puissances">
                             <li><a href="fr/europe/puissances.html/#france">Royaume de France</a></li>
                             <li><a href="fr/europe/puissances.html/#grande-bretagne">Royaume de Grande-Bretagne</a></li>
                             <li><a href="fr/europe/puissances.html/#prusse">Royaume de Prusse</a></li>
@@ -70,7 +70,7 @@ git push
                         </ul>
                     </li>
                     <li><a href = "fr/europe/diplomatie.html">Relations diplomatiques</a>
-                        <ul class="depliant2">
+                        <ul class="depliant_diplomatie">
                             <li><a href="fr/europe/diplomatie.html/#franco-anglaise">Rivalité franco-anglaise</a></li>
                             <li><a href="fr/europe/diplomatie.html/#prusso-autrichienne">Rivalité prusso-autrichienne</a></li>
                             <li><a href="fr/europe/diplomatie.html/#anglo-prussienne">Relations anglo-prussiennes</a></li>
@@ -78,7 +78,7 @@ git push
                         </ul>
                     </li>
                     <li><a href = "fr/europe/episodes.html">Episodes de la guerre de Sept Ans</a> <!--On ne va pas faire un article pour chaque bataille, ce n'est pas l'objet du projet ...-->
-                        <ul class="depliant2">
+                        <ul class="depliant_episodes">
                             <li><a href = "fr/europe/episodes.html/#saxe_prusse">Invasion de la Saxe par la Prusse</a>
                                 <!--
                                 <ul class="depliant3">
@@ -142,22 +142,22 @@ git push
                 </ul>
             </li>
             <li><a href="fr/amerique_nord.html">En Amérique du Nord</a>
-                <ul class="depliant1">
-                    <li><a>Contexte</a></li>
-                    <li><a>Les Amérindiens et les puissances colonisatrises</a></li>
-                    <li><a>Les premières escarmouches</a></li>
-                    <!--Rajouter d'autres sections-->
+                <ul class="depliant_amerique">
+                    <li><a href="fr/amerique/contexte_amerique.html">Contexte</a></li>
+                    <li><a href="fr/amerique/acteurs_amerique.html">Les Amérindiens et les puissances colonisatrises</a></li>
+                    <li><a href="fr/amerique/conflit_amerique.html">Déroulé de la guerre en Amerique</a></li>
                 </ul>
             </li>
             <li><a href="fr/inde.html">En Inde</a>
-                <ul class="depliant1">
+                <ul class="depliant_inde">
                     <li><a href="fr/inde.html/#compagnies">Les compagnies coloniales européennes</a></li>
+                    <li><a href="fr/inde.html/#deroule">Déroulé de la guerre en Inde</a></li>
                 </ul>
             </li>
             <li><a href="fr/ailleurs.html">Le conflit ailleurs dans le monde</a>
-                <ul class="depliant1">
-                    <li><a href="fr/ailleurs.html/#empire_espagnoll">Dans l'empire colonial espagnol</a></li>
-                        <ul class = "depliant2">
+                <ul class="depliant_ailleurs">
+                    <li><a href="fr/ailleurs.html/#empire_espagnol">Dans l'empire colonial espagnol</a></li>
+                        <ul class = "depliant_espagnol">
                             <li><a href="fr/ailleurs.html/#philippines">aux Philippines</a></li>
                             <li><a href="fr/ailleurs.html/#amerique_sud_antilles">en Amérique du Sud et aux Antilles</a></li>
                         </ul>
@@ -165,33 +165,35 @@ git push
                 </ul>
             </li>
             <li><a href = "fr/issue.html">Issue</a>   
-                <ul class="depliant1">
-                    <li><a href = "fr/europe/issue.html/#paris"></a>Traité de Paris</li>
-                    <li><a href = "fr/europe/issue.html/#hubertsbourg"></a>Traité de Hubertsbourg</li>
-                    <li><a href = "fr/europe/issue.html/#hambourg"></a>Traité de Hambourg</li>
+                <ul class="depliant_issue">
+                    <li><a href = "fr/issue.html/#paris">Traité de Paris</a></li>
+                    <li><a href = "fr/issue.html/#hubertsbourg">Traité de Hubertsbourg</a></li>
+                    <li><a href = "fr/issue.html/#hambourg">Traité de Hambourg</a></li>
                 </ul>
             </li> 
-            <li><a href ="fr/europe/impacts.html">Impacts de la Guerre de Sept Ans</a>
-                <ul class="depliant1">
-                    
+            <li><a href ="fr/impacts.html">Impacts de la Guerre de Sept Ans</a>
+                <ul class="depliant_impacts">
+                    <li><a href="fr/impacts/geopolitique.html">Bouleversements des équilibres géopolitiques</a></li>
+                    <li><a href="fr/impacts/culture.html">Dans la culture</li></li>
                 </ul>            
             </li>
-            <li><a href = "fr/contemporains.html">Evènements contemporains au conflit</a>
-                <ul class="depliant1">
-                    
-                </ul>
-            </li>
+            <li><a href = "fr/contemporains.html">Evènements contemporains au conflit</a></li>
         </nav>
 
         </div>
 
         <!--Corps du site -->
 
-        <div class="cadre">
-            <h1 id="introduction">La Guerre de Sept Ans</h1>
+        <div classe="cadre_titre"> <!--On mettra ici une belle illustration :) -->
+
+            <h1>La Guerre de Sept Ans</h1>
             <h2>1756 - 1763</h2>
-            <h3><em>La Guerre de Sept Ans, premier conflit mondial ?</em></h3>
-            <p class = "introduction">Ecrire ici une brève introduction</p>
+
+        </div>
+
+        <div class="cadre">
+            <h3  id="introduction"><em>La Guerre de Sept Ans, premier conflit mondial ?</em></h3>
+            <p class = "introduction">Ecrire ici l'introduction</p>
 
             <img src="image/mappemonde.png" alt="" usemap="#mappemonde" class="mappemonde" id="carte" /> <!--Trouver une carte de petite taille-->
 
