--- a/fr/europe.html
+++ b/fr/europe.html
@@ -27,9 +27,9 @@ git push
               <li><a href="contact.html">Contact</a></li>
               <li><a>Langage</a>
                 <ul class="depliant_langage">
-                    <li><a href="../en/home_page.html">English</a></li>
+                    <li><a href="../en/europe.html">English</a></li>
                     <li><a href="../de/startseite.html">Deustche</a></li>
-                    <li><a href="../es/pagina_de_inicio">Español</a></li>
+                    <li><a href="../es/europa.html">Español</a></li>
                 </ul> 
             </ul>
         </nav>
@@ -179,6 +179,137 @@ git push
             </li>
             <li><a href = "contemporains.html">Evènements contemporains au conflit</a></li>
         </nav>
+
+        <!-- Corps du Site -->
+
+        <div class="cadre_europe">
+
+            <img src="../image/europe_map_fr.png" alt="" usemap="#carte_europe" class="carte_europe" id="carte_europe" />
+
+            <map name="carte_europe">
+
+                <area
+                    class = "pays_et_regions"
+                      shape="poly"
+                      coords="534,772,527,881,776,881,780,837,742,840,742,774,653,774"
+                      href="europe/puissances.html/#grande-bretagne"
+                      alt="Royaume de Grande-Bretagne"/>
+
+                <area
+                    class = "pays_et_regions"
+                      shape="poly"
+                      coords="1074,1288,1064,1391,1307,1394,1310,1343,1283,1346,1286,1285"
+                      href="europe/puissances.html/#france"
+                      alt="Royaume de France"/>
+
+                <area
+                    class = "pays_et_regions"
+                      shape="poly"
+                      coords="1471,1013,1471,1054,1522,1057,1519,1095,1474,1095,1471,1136,1450,1136,1450,1174,1693,1177,1697,1105,1649,1106,1649,1058,1690,1057,1690,1016"
+                      href="europe/puissances.html/#saint_empire"
+                      alt="Saint-Empire Romain Germanique"/>
+
+                <area
+                    class = "pays_et_regions"
+                      shape="poly"
+                      coords="1721,903,1734,937,2063,773,2045,739"
+                      href="europe/puissances.html/#prusse"
+                      alt="Royaume de Prusse"/>
+
+                <area
+                    class = "pays_et_regions"
+                      shape="poly"
+                      coords="1977,1465,1980,1417,2541,1417,2541,1465"
+                      href="europe/puissances.html/#habsbourg"
+                      alt="Monarchie de Habsbourg"/>
+  
+                <area
+                    class = "pays_et_regions"
+                      shape="poly"
+                      coords="2305,836,2299,904,2333,904,2329,962,2740,966,2740,918,2764,914,2771,839"
+                      href="europe/puissances.html/#pologne"
+                      alt="République des Deux Nations"/>
+  
+                <area
+                    class = "pays_et_regions"
+                      shape="poly"
+                      coords="708,1988,469,1988,462,2088,705,2088"
+                      href="europe/puissances.html/#portugal"
+                      alt="Royaume du Portugal"/>
+
+                <area
+                    class = "pays_et_regions"
+                      shape="poly"
+                      coords="144,2049,188,2066,308,1717,267,1700"
+                      href="europe/puissances.html/#espagne"
+                      alt="Royaume d'Espagne"/>
+
+                <area
+                    class = "pays_et_regions"
+                      shape="poly"
+                      coords="3013,681,3007,756,3581,756,3581,681"
+                      href="europe/puissances.html/#russie"
+                      alt="Empire Russe"/>
+
+                <area
+                    class = "pays_et_regions"
+                      shape="poly"
+                      coords="1792,339,1792,438,1994,438,1998,339"
+                      href="europe/puissances.html/#suede"
+                      alt="Royaume de Suède"/>
+
+                <area
+                    class = "pays_et_regions"
+                      shape="poly"
+                      coords="1768,1019,1768,1043,1789,1043,1789,1074,1874,1074,1874,1046,1892,1046,1892,1019"
+                      href="europe/puissances.html/#saxe"
+                      alt="Electorat de Saxe"/>
+
+                <area
+                    class = "pays_et_regions"
+                      shape="poly"
+                      coords="1567,805,1570,829,1591,829,1584,859,1608,863,1608,897,1662,897,1659,866,1679,859,1676,835,1697,832,1693,805"
+                      href="europe/puissances.html/#hanovre"
+                      alt="Electorat de Hanovre"/>
+
+                <area
+                    class = "bataille"
+                      shape="circle"
+                      coords="1119,2060,20"
+                      href="europe/episodes.html/#naval"
+                      alt="Minorque"/>
+
+                <area
+                    class = "bataille"
+                      shape="circle"
+                      coords="1567,2365,24"
+                      href="europe/episodes.html/#naval"
+                      alt="Bataille de Carthagène"/>
+
+                <area
+                    class = "bataille"
+                      shape="circle"
+                      coords="756,1233,24"
+                      href="europe/episodes.html/#naval"
+                      alt="Belle-Île et Quiberon"/>
+
+                <area
+                    class = "bataille"
+                      shape="circle"
+                      coords="322,1793,24"
+                      href="europe/episodes.html/#portugal_espagne"
+                      alt="Almeida"/>
+
+                <area
+                    class = "zoom"
+                      shape="rect"
+                      coords="1283,679,2275,1342"
+                      href="#zoom"                      
+                      alt="zoom en Allemagne"/> <!--Rajouter une ancre dans le site !-->
+
+            </map>
+
+        </div>
 
     </body>
 </html>
