--- a/fr/inde.html
+++ b/fr/inde.html
@@ -27,9 +27,7 @@ git push
               <li><a href="contact.html">Contact</a></li>
               <li><a>Langage</a>
                 <ul class="depliant_langage">
-                    <li><a href="../en/home_page.html">English</a></li>
-                    <li><a href="../de/startseite.html">Deustche</a></li>
-                    <li><a href="../es/pagina_de_inicio">Español</a></li>
+                    <li><a href="../en/india.html">English</a></li>
                 </ul> 
             </ul>
         </nav>
