--- a/accueil_projet_de_langue.html
+++ b/accueil_projet_de_langue.html
@@ -29,7 +29,7 @@ git push
                 <ul class="depliant_langage">
                     <li><a href="en/home_page.html">English</a></li>
                     <li><a href="de/startseite.html">Deustche</a></li>
-                    <li><a href="es/pagina_de_inicio">Español</a></li>
+                    <li><a href="es/pagina_de_inicio.html">Español</a></li>
                 </ul> 
             </ul>
         </nav>
