ajout de la page fr/source.html

--- a/accueil_projet_de_langue.html
+++ b/accueil_projet_de_langue.html
@@ -25,6 +25,7 @@ git push
               <li><a href="accueil_projet_de_langue.html">Accueil</a></li>
               <li><a href="fr/a_propos.html">À propos</a></li>
               <li><a href="fr/contact.html">Contact</a></li>
+              <li><a href="fr/source.html">Sources</a></li>
               <li><a>Langage</a>
                 <ul class="depliant_langage">
                     <li><a href="en/home_page.html">English</a></li>
@@ -193,7 +194,8 @@ git push
 
         <div class="cadre">
             <h3  id="introduction"><em>La Guerre de Sept Ans, premier conflit mondial ?</em></h3>
-            <p class = "introduction">Ecrire ici l'introduction</p>
+
+            <p class = "introduction"> </p>
 
             <img src="image/mappemonde.png" alt="" usemap="#mappemonde" class="mappemonde" id="carte" /> <!--Trouver une carte de petite taille-->
 
