--- a/fr/europe.html
+++ b/fr/europe.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
  
-<!--Tryptique pour passer de local à remote :
-git add .
-git commit -m "commentaire à la con"
-git push
--->
 
 <html lang="fr">
     <head>
@@ -25,6 +20,7 @@ git push
               <li><a href="../accueil_projet_de_langue.html">Accueil</a></li>
               <li><a href="a_propos.html">À propos</a></li>
               <li><a href="contact.html">Contact</a></li>
+              <li><a href="source.html">Sources</a></li>
               <li><a>Langage</a>
                 <ul class="depliant_langage">
                     <li><a href="../en/europe.html">English</a></li>
@@ -308,6 +304,12 @@ git push
                       alt="zoom en Allemagne"/> <!--Rajouter une ancre dans le site !-->
 
             </map>
+
+        </div>
+
+        <div class = "zoom_allemagne" id = "zoom">
+            
+            <img src="../image/zoom_allemagne.png" alt="" usemap="#carte_allemagne" class="carte_allemagne" id="carte_akkelagne" />
 
         </div>
 
