--- a/fr/issue.html
+++ b/fr/issue.html
@@ -25,6 +25,7 @@ git push
               <li><a href="../accueil_projet_de_langue.html">Accueil</a></li>
               <li><a href="a_propos.html">À propos</a></li>
               <li><a href="contact.html">Contact</a></li>
+              <li><a href="source.html">Sources</a></li>
               <li><a>Langage</a>
                 <ul class="depliant_langage">
                     <li><a href="../en/result.html">English</a></li>
