ajout de l'introduction

--- a/accueil_projet_de_langue.html
+++ b/accueil_projet_de_langue.html
@@ -195,7 +195,66 @@ git push
         <div class="cadre">
             <h3  id="introduction"><em>La Guerre de Sept Ans, premier conflit mondial ?</em></h3>
 
-            <p class = "introduction"> </p>
+            <div class = "introduction"> 
+
+                <p>
+                    Nous sommes en 1754. Il aurait été difficile de croire que l’un des conflits majeurs
+                    de ce siècle naîtrait dans l’obscurité des forêts canadiennes. Venant d’Angleterre, de France, 
+                    d’Allemagne mais aussi de Pologne où des Pays-Bas, les colons européens arrivent massivement 
+                    en Nouvelle-France et en Nouvelle-Angleterre, mais peu s’installent loin des côtes. Les espaces
+                     qui entourent la région des Grands Lacs sont pour une large part inhabités par les européens.
+                </p>
+
+                <p>
+                    Ce sont les amérindiens qui peuplent ces terres. 
+                </p>
+
+                <p>
+                    Loin de former une population homogène, les amérindiens qui vivent dans cette région parlent 
+                    des langues différentes, célèbrent des rites divers et constituent des réseaux puissants, 
+                    entretenant des liens avec les colonies anglaises et françaises. Des échanges commerciaux 
+                    et diplomatiques se développent, mais les tensions persistent, alimentées notamment par 
+                    l’inimitié franco-anglaise actuelle et surtout par les spoliations successives des terres
+                    amérindiennes, promises à la spéculation foncière.
+                </p>
+
+                <p>
+                    Aux confins de la Pennsylvanie, l’administration coloniale britannique entreprend et planifie
+                    depuis 1747 la colonisation de la vallée de la Belle Rivière – Ohio en langue iroquoienne seneca.
+                    Elle crée alors la Compagnie de l’Ohio, une entreprise de spéculation foncière, et construit des
+                    forts pour protéger les dizaines de familles venant s’installer dans ces plaines fertiles au 
+                    climat moins rude que ceux du Québec ou de la Nouvelle-Angleterre. Ces terres sont néanmoins 
+                    aussi revendiquées par la France, qui construit en représailles plusieurs fortifications le
+                    long de cette vallée. Les premiers accrochages ne tarderont pas à provoquer une animosité
+                    grandissante entre les deux puissances, qui se répandra plus tard en Europe et dans le monde.
+                </p>
+
+                <p>
+                    A l’origine de la guerre de Sept Ans, qui durera dans les faits neufs ans, nous trouvons
+                    donc des escarmouches mineures en Amérique en Nord. Ces combats – même s’ils ne sont pas 
+                    les seuls responsables – auront des effets désastreux sur le fragile équilibre géopolitique 
+                    européen, issu de la guerre de Succession d’Autriche. L’histoire du début de la guerre de Sept Ans
+                    est donc à la fois l’analyse de cet enlisement progressif dans les hostilités mais aussi l’étude
+                    de sa propagation ; car dans la lente marche de la mondialisation, ce conflit a toutes les 
+                    caractéristiques d’un conflit mondial, ou du moins mondialisé. Ce sont ces caractéristiques 
+                    que ce site tâche de mettre en lumière dans un premier temps.
+                </p>
+
+                <p>
+                    Dans un second temps, ce site s’attache à exposer l’évolution et la différence des points
+                    de vue historiographiques sur ce conflit, car nos perceptions de la Guerre de Sept Ans 
+                    ont bien sûr évolué à travers deux cent cinquante ans d’histoire politique et divergent
+                    suivant quels belligérants nous en fait part.
+                </p>
+
+                <p>
+                    Pour bien commencer la navigation sur ce site, la mappemonde ci-dessous, datée précisément 
+                    de 1754 et dressée par Jacques-Nicolas Bellin, donne une idée détaillée de la perception du 
+                    monde par les européens à cette époque. Cliquez sur les zones grises de la carte indiquant 
+                    les champs de batailles de la Guerre de Sept Ans.
+                </p>
+
+            </div>
 
             <img src="image/mappemonde.png" alt="" usemap="#mappemonde" class="mappemonde" id="carte" /> <!--Trouver une carte de petite taille-->
 
